--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,3 +1,3 @@
 include README.md
-recursive-include medacy/tests/sample_data/
+recursive-include medacy/tests/sample_data *.txt *.ann *.pkl
 include config.json
